--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.2",
+    "com.unity.physics": "0.4.1-preview",
     "com.unity.render-pipelines.universal": "7.3.1",
     "com.unity.rendering.hybrid": "0.5.2-preview.4",
     "com.unity.test-framework": "1.1.18",
